Switch the default ethernet interface name

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:latest
 
 # Default firmware version
 ARG FIRMWARE_VERSION=1100
-ARG INTERFACE=eth0
+ARG INTERFACE=enp0s31f6
 
 # Install necessary dependencies and download PPPwn++
 RUN apk add --no-cache bash wget curl unzip tar && \
