--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,8 @@ FROM alpine:latest
 # Default firmware version
 ARG FIRMWARE_VERSION=1100
 ARG INTERFACE=enp0s31f6
+ENV FIRMWARE_VERSION=${FIRMWARE_VERSION}
+ENV INTERFACE=${INTERFACE}
 
 # Install necessary dependencies and download PPPwn++
 RUN apk add --no-cache bash wget curl unzip tar && \
